<resources>
    <string name="app_name">FFC</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Home">Home</string>
    <string name="ActivityHome">ActivityHome</string>
    <string name="LocalTravel">Local Travel</string>
    <string name="Target">Target</string>
    <string name="Office">Office</string>
    <string name="PrivateTravel">Private Travel</string>
    <string name="ExpenseModel">ExpenseModel</string>
    <string-array name="menu_items_ids">
        <item>Ac_Home</item>
        <item>Ac_Dashboard</item>
        <item>Ac_Target</item>
        <item>Ac_Expense</item>
        <item>Ac_SOrder</item>
        <item>Ac_MSetting</item>
        <item>Ac_EndDay</item>
        <item>Ac_MyProfile</item>
        <item>Ac_Farm</item>
        <item>Ac_Doctor</item>
        <item>Ac_MedicalStore</item>
        <item>Ac_Tracking</item>
        <item>Ac_Chat</item>
        <item>Ac_SaleOrder</item>
        <item>Ac_Customer</item>
        <item>Ac_Meeting</item>
        <item>Ac_Hospital</item>
        <item>Ac_Reset_Password</item>

    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="home">Home</string>
    <string name="targets">Targets</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="doctor_profile">Doctor Profile</string>
    <string name="end_day">End Day</string>
    <string name="signout">SignOut</string>
    <string name="my_profile">My Profile</string>
    <string name="reset_password">Reset Password</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="master_setting">Master Setting</string>
    <string name="visit">Visit</string>
    <string name="xyz">xyz</string>
    <string name="main_bulevard_model_town_lahore">Main Bulevard Model Town Lahore.</string>
    <string name="distance_10_km">Distance: 10 Km</string>
    <string name="reschedule">Reschedule</string>
    <string name="cancel">Cancel</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="hh_mm">HH:MM</string>
    <string name="reschedule_activity">Reschedule Activity</string>
    <string name="product_info">Product Info</string>
    <string name="find">Find</string>
    <string name="info">Info</string>
    <string name="compelete">Compelete</string>
    <string name="delete">Delete</string>
    <string name="compelete_activity">Compelete Activity</string>
    <string name="add_work_plan">Add Work Plan</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="select_areas">Select Areas</string>
    <string name="areas">Areas</string>
    <string name="select_doctors">Select Doctors</string>
    <string name="doctors">Doctors</string>
    <string name="select_data">Select Data</string>
    <string name="set">Set</string>
    <string name="type_remarks">Type Remarks</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="classification">Classification </string>
    <string name="select_filter">Select Filter</string>
    <string name="select_classification">Select Classification</string>
    <string name="qualification">Qualification</string>
    <string name="grading">Grading</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="date_of_birth_format_day_month_year">Date of Birth (format:day/Month/year)</string>
    <string name="clinic_timing">Clinic Timing</string>
    <string name="gender">Gender</string>
    <string name="scheduleModels">Schedules</string>
    <string name="closing_timing">Closing Timing</string>
    <string name="opening_timing">Opening Timing</string>
    <string name="area">Area</string>
    <string name="region">Region</string>
    <string name="add_schedule">Add ScheduleModel</string>
    <string name="education_designation">Education/Designation</string>
    <string name="timings_schedule">Timings/ScheduleModel</string>
    <string name="personal_information">Personal Information</string>
    <string name="select_region">Select Region</string>
    <string name="select_opening_timing">Select Opening Timing</string>
    <string name="select_closing_timing">Select Closing Timing</string>
    <string name="select_day">Select Day</string>
    <string name="added_schedule">Added Schedule</string>
    <string name="primary_location">Primary Location</string>
    <string name="type">Type..</string>
    <string name="please_enter_your_remarks">Please enter your remarks</string>
    <string name="cancel_activity">Cancel Activity</string>
    <string name="save">Save</string>
    <string name="select_time">Select Time</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_from_gallery">Select From Gallery</string>
    <string name="start_day">Start Day</string>
    <string name="system_suggested">System Suggested</string>
    <string name="here_system_would_suggest_you_the_work_plan_for_a_specified_day_for_current_day_system_automatically_make_work_plan_for_you">Here, system would suggest you the work plan for a specified day. For current day, system automatically make work plan for you.</string>
    <string name="next">Next</string>
    <string name="work_plan">Work Plan</string>
    <string name="long_text">Here, you can find the work plan that you set for a specified date and time. This work plan would not be system suggested.</string>
    <string name="long_text_customer_suggested">Here, you can find the Customer that created by users and suggested by system.</string>
    <string name="menu">Menu</string>
    <string name="mark_your_attendance">Mark Your Attendance</string>
    <string name="date_time">Date/Time</string>
    <string name="imei_number">IMEI Number</string>
    <string name="name">Name</string>
    <string name="done">Done</string>
    <string name="routes">Routes</string>
    <string name="status">Status </string>
    <string name="stage">Stage</string>
    <string name="please_enter_purpose">Please enter purpose</string>
    <string name="visit_purpose">Visit Purpose</string>
    <string name="please_enter_remarks">Please enter remarks</string>
    <string name="remarks">Remarks</string>
    <string name="person_in_contact_phone">Person in Contact Phone</string>
    <string name="please_enter_person_in_contact">Please enter person in contact</string>
    <string name="person_in_contact">Person in Contact</string>
    <string name="remarks_about_product">Remarks about product</string>
    <string name="please_enter_principal_reviews">Please enter principal reviews</string>
    <string name="reviews_of_host">Reviews of host</string>
    <string name="interest_level">Interest Level</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="grade">Grade</string>
    <string name="activity_type">Activity Type</string>
    <string name="select_activity">Select Activity</string>
    <string name="feedback">Feedback</string>
    <string name="purpose">Purpose</string>
    <string name="select_meeting_type">Select Meeting Type</string>
    <string name="add_multiples">Add Multiples</string>
    <string name="host_name">Host Name</string>
    <string name="location">Location</string>
    <string name="description">Description..</string>
    <string name="from_time">From Time</string>
    <string name="participants">Participants</string>
    <string name="related_to">Related To</string>
    <string name="location_requests">Location Requests</string>
    <string name="distance_covered">Distance Covered :</string>
    <string name="current_location">Current Location :</string>
    <string name="chats">Chats</string>
    <string name="type_message_here">Type message here…</string>
    <string name="send">Send</string>
    <string name="party_name">Party Name</string>
    <string name="party_abbreviation">Party Abbreviation</string>
    <string name="focal_peron_name">Focal Peron Name</string>
    <string name="focal_person_cnic">Focal Person CNIC</string>
    <string name="sale_tax_no">Sale Tax No.</string>
    <string name="ntn">NTN</string>
    <string name="tax_information">Tax Information</string>
    <string name="company">Company</string>
    <string name="credit_information">Credit Information</string>
    <string name="credit_days">Credit Days</string>
    <string name="credit_limit">Credit Limit</string>
    <string name="apply_cr_limit">Apply Cr Limit</string>
    <string name="email_cc">Email CC</string>
    <string name="email_bcc">Email BCC</string>
    <string name="enter_multiple_contact">Enter Multiple Contact</string>
    <string name="fax">Fax</string>
    <string name="city">City</string>
    <string name="contact_information">Contact Information</string>
    <string name="payee">Payee</string>
    <string name="n_a">N/A</string>
    <string name="warning">Warning</string>
    <string name="critical">Critical</string>
    <string name="credit_limits_prompt_type">Credit Limits Prompt Type</string>
    <string name="address">Address</string>
    <string name="instruction">Instruction</string>
    <string name="comment">Comment</string>
    <string name="designation">Designation</string>
    <string name="add_contact">Add Contact</string>
    <string name="select_salesman">Select Salesman</string>
    <string name="select_city">Select City</string>
    <string name="reset_form">Reset Form</string>
    <string name="focal_person_name">Focal Person Name:</string>
    <string name="Phone">Phone:</string>
    <string name="Email">Email:</string>
    <string name="City">City:</string>
    <string name="Status">Status:</string>
    <string name="by_date">By Date</string>
    <string name="Days_ago">days ago</string>
    <string name="from_date">From Date: </string>
    <string name="select_customer">Select Customer -\-</string>
    <string name="to_date">To Date:</string>
    <string name="by_priority">By Priority</string>
    <string name="add">Add</string>
    <string name="nothing_found">Nothing Found</string>
    <string name="sale_order_no">Sale Order No.</string>
    <string name="ledger_balance">Ledger Balance</string>
    <string name="select_delivery_mode">Select Delivery Mode:</string>
    <string name="select_priority">Select Priority:</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="calculate_sales_tax">Calculate Sales Tax</string>
    <string name="gross_amount">Gross Amount</string>
    <string name="discounted_amount">Discounted Amount</string>
    <string name="products">Products</string>
    <string name="code">Code:</string>
    <string name="title">Title:</string>
    <string name="add_sale_order">Add Sale Order</string>
    <string name="upload">Upload</string>
    <string name="download_master_data">DownLoad Master Data</string>
    <string name="action">Action</string>
    <string name="approved">Approved</string>
</resources>