<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:title="@string/search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:icon="@drawable/ic_search"
        />

    <item
        android:id="@+id/filter"
        android:title="@string/filter"
        android:icon="@drawable/ic_outline_filter_alt_24"
        app:showAsAction="ifRoom|collapseActionView"
        />
    <item
        android:id="@+id/upload"
        android:title="@string/upload"
        android:icon="@drawable/ic_baseline_upload_24"
        app:showAsAction="ifRoom|collapseActionView"
        />
    <item
        android:id="@+id/action_download_master_data"
        android:title="@string/download_master_data"
        app:showAsAction="never"
        />


    <item
        android:id="@+id/nav_about_us"
        android:title="@string/about_us"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/signOut"
        android:title="@string/signout"
        app:showAsAction="never"
        />


</menu>