<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>

    <item
        android:id="@+id/nav_start_day"
        android:icon="@drawable/ic_target"
        android:title="@string/targets"/>

    <item
        android:id="@+id/doctorListFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/doctor_profile"/>

    <item
        android:id="@+id/locationRequestFragment"
        android:icon="@drawable/ic_list_svgrepo_com"
        android:title="@string/more"/>
    <item
        android:id="@+id/nav_expense_list"
        android:icon="@drawable/ic_expense"
        android:title="@string/more"/>
</menu>