<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@color/APP_Theme_Color"
    android:layout_margin="8dp"
    android:padding="5dp"
    app:strokeColor="@color/APP_Theme_Color"
    app:strokeWidth="1dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            >
            <TextView
                android:id="@+id/tv_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Code: "
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            <ImageButton
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_mode_edit_24"
                android:background="@android:color/transparent"
                android:layout_marginEnd="10dp"
                android:layout_marginVertical="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:paddingVertical="8dp"
            android:textSize="14sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>
        <TextView
            android:id="@+id/tv_focal_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/focal_peron_name"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:paddingVertical="8dp"
            android:textSize="14sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>
        <TextView
            android:id="@+id/tv_phone_numer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:paddingVertical="8dp"
            android:textSize="14sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>
        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:paddingVertical="8dp"
            android:textSize="14sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>
        <TextView
            android:id="@+id/tv_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:background="@color/white"
            android:paddingHorizontal="10dp"
            android:paddingVertical="8dp"
            android:textSize="14sp"
            />


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>