<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/tools"
    android:background="@drawable/dialog_background"
    android:backgroundTint="@android:color/transparent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_activity"
        android:textSize="18sp"
        android:textColor="@color/APP_Theme_Color"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/APP_Theme_Color"
        android:layout_marginVertical="5dp"
        />


    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="30dp"
        android:hint="@string/activity_type"
        android:elevation="5dp"
        android:inputType="none"

        android:textColorHint="@color/black"
        app:helperTextTextColor="@color/APP_Theme_Color"
        app:hintTextColor="@color/APP_Theme_Color">

        <AutoCompleteTextView
            android:id="@+id/activty_drop_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"

            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:strokeWidth="1dp"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/APP_Theme_Color"
            android:textColor="@color/APP_Theme_Color"
            android:textStyle="bold"
            app:rippleColor="@color/APP_Theme_Color"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            app:elevation="5dp"
            android:layout_marginEnd="30dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/done_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            app:strokeWidth="1dp"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/APP_Theme_Color"
            android:textColor="@color/APP_Theme_Color"
            android:textStyle="bold"
            app:rippleColor="@color/APP_Theme_Color"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            app:elevation="5dp"

            android:layout_marginStart="30dp"

            />
    </LinearLayout>


</LinearLayout>